fix spacing issues (microsoft/vscode-python#4980)

--- a/extensions/positron-python/src/datascience-ui/history-react/variableExplorer.css
+++ b/extensions/positron-python/src/datascience-ui/history-react/variableExplorer.css
@@ -8,6 +8,3 @@
     right: 0;
     background-color: var(--vscode-editor-background);
 }
-.hide {
-    display: none;
-}
